<?xml version="1.0" encoding="utf-8"?>

<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="16dp">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/cars"
        android:textSize="28sp"
        android:textStyle="bold"
        android:layout_marginBottom="16dp" />

    <Button
        android:id="@+id/buttonAddCar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/add_car"
        android:layout_marginBottom="16dp" />

    <Button
        android:id="@+id/buttonUpdateCar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/update_car"
        android:layout_marginBottom="16dp" />


    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/cars"
        android:textSize="24sp"
        android:textStyle="bold"
        android:layout_marginBottom="16dp" />

    <LinearLayout
        android:id="@+id/carsContainer"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical" />

</LinearLayout>